--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,21 +3,13 @@ version: 0.2
 phases:
   install:
     commands:
-
-      # Upgrade AWS CLI to the latest version
       - pip install --upgrade awscli
 
-  pre_build:
-    commands:
-
-      # Discover and run unit tests in the 'tests' directory. For more information, see <https://docs.python.org/3/library/unittest.html#test-discovery>
-      - python -m unittest discover tests
-  
   build:
     commands:
 
       # Use AWS SAM to package the application by using AWS CloudFormation
-      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
+      - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml
 
       # Do not remove this statement. This command is required for AWS CodeStar projects.
       # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
