--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,8 +11,7 @@ phases:
       # Use AWS SAM to package the application by using AWS CloudFormation
       - pip install --upgrade pip
       - pip install --upgrade awscli
-      - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml --parameter-overrides CodeDeployRole=arn:aws:iam::322652498512:role/service-role/AWSCodePipelineServiceRole-us-east-1-surgeon-prod
-
+      - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml
       # Do not remove this statement. This command is required for AWS CodeStar projects.
       # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
       - sed -i.bak 's/\$PARTITION\$/'${PARTITION}'/g;s/\$AWS_REGION\$/'${AWS_REGION}'/g;s/\$ACCOUNT_ID\$/'${ACCOUNT_ID}'/g;s/\$PROJECT_ID\$/'${PROJECT_ID}'/g' template-configuration.json
