--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       # Use AWS SAM to package the application by using AWS CloudFormation
       - pip install --upgrade pip
       - pip install --upgrade awscli
-      - pip install -r requirements.txt
+      - pip install -r src\requirements.txt
       - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml
       # Do not remove this statement. This command is required for AWS CodeStar projects.
       # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
