--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,15 +7,11 @@ phases:
 
   build:
     commands:
-
-      # Use AWS SAM to package the application by using AWS CloudFormation
       - pip install --upgrade pip
       - pip install --upgrade awscli
-      - pip install -r src/requirements.txt
-      - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml
-      # Do not remove this statement. This command is required for AWS CodeStar projects.
-      # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
-      # - sed -i.bak 's/\$PARTITION\$/'${PARTITION}'/g;s/\$AWS_REGION\$/'${AWS_REGION}'/g;s/\$ACCOUNT_ID\$/'${ACCOUNT_ID}'/g;s/\$PROJECT_ID\$/'${PROJECT_ID}'/g' template-configuration.json
+      - pip install --upgrade aws-sam-cli
+      - sam build -b .aws-sam/build
+      - sam package --s3-bucket $S3_BUCKET --template-file .aws-sam/build/template.yaml --output-template-file template-export.yml
 
 artifacts:
   type: zip
