--- a/template.yaml
+++ b/template.yaml
@@ -14,10 +14,10 @@ Parameters:
     Default: ''
 
 Resources:
-  Task:
+  EngineTask:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: toll_booth.handler
+      Handler: toll_booth.engine_handler
       Runtime: python3.7
       Tracing: Active
       CodeUri: src/
@@ -25,6 +25,28 @@ Resources:
         Fn::GetAtt:
         - LambdaExecutionRole
         - Arn
+  BuildTask:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: toll_booth.build_handler
+      Runtime: python3.7
+      Tracing: Active
+      CodeUri: src/
+      Role:
+        Fn::GetAtt:
+          - LambdaExecutionRole
+          - Arn
+  SendTask:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: toll_booth.send_handler
+      Runtime: python3.7
+      Tracing: Active
+      CodeUri: src/
+      Role:
+        Fn::GetAtt:
+          - LambdaExecutionRole
+          - Arn
   LambdaExecutionRole:
     Description: Creating service role in IAM for AWS Lambda
     Type: AWS::IAM::Role
